# use_case_deporvillage

./: .gitignore  1_data_exploration.ipynb  2_data_preprocessing.ipynb  2_model_naive.ipynb  3_model_lightGBM.ipynb  4_hierarchical.ipynb  4_model_hierarchical.ipynb  4_model_naive.ipynb  5_model_hierarchical.ipynb  5_model_hierarchical_categories.ipynb  6_model_hierarchical_2.ipynb  README.md  pyproject.toml
utils/: utils_features.py  utils_features_family.py  utils_features_old.py  utils_features_seasonality.py  utils_features_stores.py  utils_models.py  utils_plots.py  utils_preprocessing.py
